--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anuário Digital</title>
+  <title>Anuário Digital - Memórias 3ºA</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,12 +12,11 @@
 
   <div class="container">
     <header class="site-header">
-      <h1 class="title">MEMÓRIAS DO INFO</h1>
+      <h1 class="title">MEMÓRIAS 3ºA</h1>
       <nav class="main-nav">
-        <a href="#" class="nav-item active" data-category="turma">Turma</a>
-        <a href="#" class="nav-item" data-category="professores">Professores</a>
+        <a href="#" class="nav-item active" data-category="alunos">Alunos</a>
         <a href="#" class="nav-item" data-category="eventos">Eventos</a>
-        <a href="#" class="nav-item" data-category="todos">Ver Todos</a>
+        <a href="#" class="nav-item" data-category="professores">Professores</a>
       </nav>
     </header>
 
@@ -27,8 +26,7 @@
   <div class="modal" id="video-modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <video id="modal-video-player" controls preload="metadata">
-        </video>
+      <video id="modal-video-player" controls preload="metadata"></video>
     </div>
   </div>
 
