Atulizações de estilo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h1 class="title">MEMÓRIAS 3ºA</h1>
       <nav class="main-nav">
         <a href="#" class="nav-item active" data-category="alunos">Alunos</a>
-        <a href="#" class="nav-item" data-category="eventos">Eventos</a>
         <a href="#" class="nav-item" data-category="professores">Professores</a>
+        <a href="#" class="nav-item" data-category="eventos">Lembranças</a>
       </nav>
     </header>
 
