--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anuário Digital - Memórias 3ºA</title>
+  <title>Anuário Digital - Memórias Informática</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,9 @@
 
   <div class="container">
     <header class="site-header">
-      <h1 class="title">MEMÓRIAS 3ºA</h1>
+      <h1 class="title">Anuário Digital 
+        <small>Etec cidade tiradentes</small>
+      </h1>
       <nav class="main-nav">
         <a href="#" class="nav-item active" data-category="alunos">Alunos</a>
         <a href="#" class="nav-item" data-category="professores">Professores</a>
