modificações para apresentação

--- a/spf.html
+++ b/spf.html
@@ -3,22 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anuário Digital - Memórias Informática</title>
+  <title>Anuário Digital - Lembrando da SPF</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=VT323&display=swap" rel="stylesheet">
-</head><body>
+</head>
+<body>
 
   <div class="container">
     <header class="site-header">
-      <h1 class="title">Anuário Digital 
-        <small>Etec de cidade tiradentes</small>
+      <h1 class="title" id="page-title">Anuário Digital 
+        <small id="spf">Etec cidade tiradentes</small>
       </h1>
       <nav class="main-nav">
-        <a href="#" class="nav-item active" data-category="alunos">Alunos</a>
-        <a href="#" class="nav-item" data-category="professores">Professores</a>
-        <a href="#" class="nav-item" data-category="eventos">Lembranças</a>
+        <a href="index.html" class="nav-item">Voltar ao Início</a>
       </nav>
     </header>
 
@@ -32,6 +31,6 @@
     </div>
   </div>
 
-  <script src="main.js"></script>
-</body><script src="pressionarTecla.js"></script>
+  <script src="spf.js"></script>
+</body>
 </html>
