--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <header class="site-header">
       <h1 class="title">Anuário Digital 
-        <small>Etec de cidade tiradentes</small>
+        <small>Etec de Cidade Tiradentes</small>
       </h1>
       <nav class="main-nav">
         <a href="#" class="nav-item active" data-category="alunos">Alunos</a>
